# AB_applied-programming

./: AB_Programming.cpp  CMakeLists.txt  README.md
myapp/: CMakeLists.txt  main.cpp
myapp/impl/: AppointmentImpl.cpp  DoctorImpl.cpp  PatientImpl.cpp
myapp/include/: Appointment.h  Doctor.h  History.h  MedicalEntity.h  Patient.h  Utils.h
myapp/model/: Appointment.h  Doctor.h  Patient.h  User.h
myapp/src/: AppointmentImpl.cpp  DoctorImpl.cpp  PatientImpl.cpp  main.cpp
